[gd_scene load_steps=2 format=3 uid="uid://dpvjgk5ujb4v0"]

[ext_resource type="Script" path="res://scenes/combat/scripts-combat/combat_ui.gd" id="1_combat_ui"]

[node name="CombatUI" type="CanvasLayer"]
script = ExtResource("1_combat_ui")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="TurnInfo" type="MarginContainer" parent="Control"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -100.0
offset_right = 100.0
offset_bottom = 100.0
grow_horizontal = 2
theme_override_constants/margin_top = 40

[node name="Panel" type="Panel" parent="Control/TurnInfo"]
custom_minimum_size = Vector2(300, 80)
layout_mode = 2

[node name="VBox" type="VBoxContainer" parent="Control/TurnInfo"]
layout_mode = 2
alignment = 1

[node name="TurnLabel" type="Label" parent="Control/TurnInfo/VBox"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "YOUR TURN"
horizontal_alignment = 1

[node name="EndTurnButton" type="Button" parent="Control"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -160.0
offset_top = -80.0
offset_right = -40.0
offset_bottom = -30.0
grow_horizontal = 0
grow_vertical = 0
text = "End Turn (Y)"

[node name="StatsContainer" type="MarginContainer" parent="Control"]
layout_mode = 1
anchors_preset = 0
offset_right = 250.0
offset_bottom = 200.0
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 60

[node name="StatsList" type="VBoxContainer" parent="Control/StatsContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 10

[node name="TargetContainer" type="MarginContainer" parent="Control"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -270.0
offset_bottom = 200.0
grow_horizontal = 0
theme_override_constants/margin_right = 20
theme_override_constants/margin_top = 60

[node name="VBox" type="VBoxContainer" parent="Control/TargetContainer"]
layout_mode = 2
alignment = 1

[node name="TargetTitle" type="Label" parent="Control/TargetContainer/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.270588, 0, 1)
theme_override_font_sizes/font_size = 14
text = "TARGET"
horizontal_alignment = 1

[node name="TargetName" type="Label" parent="Control/TargetContainer/VBox"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 22
text = "Enemy Name"
horizontal_alignment = 1

[node name="TargetHPBar" type="ProgressBar" parent="Control/TargetContainer/VBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 20)
layout_mode = 2
size_flags_horizontal = 4
show_percentage = false

[node name="TargetHPLabel" type="Label" parent="Control/TargetContainer/VBox"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "100/100"
horizontal_alignment = 1
